<resources>
    <string name="app_id">153812423795</string>
    <string name="app_name">MafiaGame</string>
    <string name="title_activity_test_phase">TestPhaseActivity</string>
    <string name="signin_other_error">Sign In Error</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="create_join_game">Play</string>
    <string name="sign_in_using_google_play">Sign In using Google Play</string>
    <string name="sign_out">Sign out</string>
    <string name="open_settings">Settings</string>
    <string name="hello_default">Hello!</string>
    <string name="set_name_button">Set Name</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="hello_with_name">Hi, %s!</string>
    <string name="create_room_button">Create room</string>
    <string name="configure_player_bounds_button">Configure player bounds</string>
    <string name="waiting_room_button">Waiting Room</string>
    <string name="check_for_invitation_button">Check for invitations</string>
    <string name="invitation_inbox_button">Invitation Inbox</string>
    <string name="mafias_count_seekbar">Mafias count</string>
    <string name="include_doctor_button">Include doctor</string>
    <string name="include_investigator_button">include investigator</string>
    <string name="finish_configure_game_button">Start</string>
    <string name="toolbar_configure_game">Configure game settings</string>
    <string name="toolbar_wait_for_configure">Waiting for server</string>
    <string name="final_button">final</string>
    <string name="next_button">next</string>
    <string name="go_to_sleep">go to sleep now</string>
    <string name="not_your_turn">Not your turn</string>
    <string name="your_device_runs_server">Your device runs server for this game. Please don\'t close the app until the game ends</string>
    <string name="server_wait_toolbar">Wait for the game to end</string>
    <string name="exit">exit</string>
    <string name="gg">GG</string>
    <string name="client_wait_toolbar">Game ended</string>
    <string name="nobody_pick">Nobody</string>
</resources>
